# EAE_Firmware

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Ztransform_fp.h  Ztransform_fx.h
output/: pid_fixed_output.csv  pid_floating_output.csv
src/: Ztransform_fp.c  Ztransform_fx.c  main.c
tools/control_design/: modle_design.py  plot_sim.py  requirements.txt
